[package]
name = "mountain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = "fat"

[dependencies]
windows-core = "0.52"

[dependencies.windows]
version = "0.52"
features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
